[code-reference/ExternalMergeSort] chore: Initial for merging

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 
 src/code-references/ExternalMergeSort/input\.txt
+
+src/code-references/ExternalMergeSort/0
+
+src/code-references/ExternalMergeSort/1
+
+src/code-references/ExternalMergeSort/2
+
+src/code-references/ExternalMergeSort/3
+
+src/code-references/ExternalMergeSort/4
+
+src/code-references/ExternalMergeSort/5
+
+src/code-references/ExternalMergeSort/6
+
+src/code-references/ExternalMergeSort/7
+
+src/code-references/ExternalMergeSort/8
+
+src/code-references/ExternalMergeSort/9
+
+src/code-references/ExternalMergeSort/output\.txt
